fix: configure CORS via environment variable